// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ETextArea > looks like a textarea > mountAsInControls 1`] = `
<div data-app>
     <div auto-grow
          class="e-form-container"
          rows="3"
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <label class="v-label v-label--active theme--light"
                                     for
                                     style="left: 0px; position: absolute;">test</label>
                              <div auto-grow
                                   class="editor editor--editable"
                                   id
                                   rows="3">
                                   <!---->
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea > looks like a textarea > multiline 1`] = `
<div data-app>
     <div class="e-form-container"
          multi-line
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <label class="v-label v-label--active theme--light"
                                     for
                                     style="left: 0px; position: absolute;">test</label>
                              <div class="editor editor--editable"
                                   id
                                   multi-line>
                                   <!---->
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea > looks like a textarea > notext 1`] = `
<div data-app>
     <div class="e-form-container">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <label class="v-label theme--light"
                                     for
                                     style="left: 0px; position: absolute;">test</label>
                              <div class="editor editor--editable"
                                   id>
                                   <!---->
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea > looks like a textarea > withtext 1`] = `
<div data-app>
     <div class="e-form-container"
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <label class="v-label v-label--active theme--light"
                                     for
                                     style="left: 0px; position: absolute;">test</label>
                              <div class="editor editor--editable"
                                   id>
                                   <!---->
                                   <div class="editor__content">
                                        <div class="tiptap ProseMirror"
                                             contenteditable="true"
                                             tabindex="0"
                                             translate="no">
                                             <p>Here comes a text with new lines and new lines with in them and tags a</p>
                                        </div>
                                   </div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;
